<resources>
    <string name="app_name">PokemonGo</string>
    <string name="go">GO</string>
    <string name="search_pokemon">Поиск покемона</string>
    <string name="random_pokemon">Случайный покемон</string>
    <string name="input_name">Введите имя или id покемона</string>
    <string name="search">Поиск</string>
    <string name="name">Имя:</string>
    <string name="base_experience">Базовый опыт:</string>
    <string name="height">Рост:</string>
    <string name="weight">Вес:</string>
    <string name="pokemon_not_found">Покемон не найден</string>
    <string name="add_favorite">Добавить в избранное</string>
    <string name="favorites">Избрынные</string>
    <string name="marked_as_favourite">Покемон добавлен в изрбранные</string>
</resources>
