<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_xs"
        tools:text="@string/name"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_base_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_xs"
        tools:text="@string/base_experience"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_xs"
        tools:text="@string/height"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_base_experience" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_marginTop="@dimen/margin_xs"
        tools:text="@string/weight"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_height" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/green"
            android:layout_marginHorizontal="@dimen/margin_xxs"/>

</androidx.constraintlayout.widget.ConstraintLayout>
