<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_pokemon_go_menu">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search_pokemon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:background="@drawable/button_background"
        android:text="@string/search_pokemon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_random_pokemon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:background="@drawable/button_background"
        android:text="@string/random_pokemon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_pokemon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_favorite_pokemon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:background="@drawable/button_background"
        android:text="@string/favorites"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_random_pokemon" />

</androidx.constraintlayout.widget.ConstraintLayout>
